--- a/config.toml
+++ b/config.toml
@@ -201,20 +201,24 @@ weight = 4
 
 # Social Icons
 [[params.social]]
-icon = "lab la-facebook-f"        # https://icons8.com/line-awesome
-url = "https://www.facebook.com/"
-
-[[params.social]]
 icon = "lab la-twitter"          # https://icons8.com/line-awesome
 url = "https://www.twitter.com/"
 
 [[params.social]]
-icon = "lab la-instagram"          # https://icons8.com/line-awesome
-url = "https://www.instagram.com/"
-
-[[params.social]]
 icon = "lab la-linkedin-in"       # https://icons8.com/line-awesome
 url = "https://www.linkedin.com/"
+
+[[params.social]]
+icon = "lab la-github"       # https://icons8.com/line-awesome
+url = "https://www.github.com/"
+
+#[[params.social]]
+#icon = "lab la-facebook-f"        # https://icons8.com/line-awesome
+#url = "https://www.facebook.com/"
+
+#[[params.social]]
+#icon = "lab la-instagram"          # https://icons8.com/line-awesome
+#url = "https://www.instagram.com/"
 
 
 #################### Custom ############################
