--- a/.github/workflows/azure-static-web-apps-gentle-flower-0c40c0e03 copy.yml
+++ b/.github/workflows/azure-static-web-apps-gentle-flower-0c40c0e03 copy.yml
@@ -4,37 +4,26 @@ on:
   push:
     branches:
       - main
-      - dev
   pull_request:
     types: [opened, synchronize, reopened, closed]
     branches:
       - main
-      - dev
+
 jobs:
   build_and_deploy_job:
     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.action != 'closed')
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
-      - name: Get URL from Branch - Main
-        if: github.ref_name == 'main'
-        run: echo "BASEURL=${{ vars.PRODUCTION_URL }}" >> $GITHUB_ENV
-      - name: Get URL from Branch - Other
-        if: github.ref_name != 'main'
-        run: echo "BASEURL=https://${{ vars.DEFAULT_HOST_NAME }}-${{ github.ref_name }}.${{ vars.LOCATION }}.azurestaticapps.net/" >> $GITHUB_ENV
-      - name: Checkout
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         with:
           submodules: true
           lfs: false
-      - name: Replace baseURL
-        run: sed -i 's|http://localhost:1313/|${{ env.BASEURL }}|' config.yml
       - name: Build And Deploy
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
-          production_branch: "main"
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_AGREEABLE_DESERT_08FFE2B1E }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_GENTLE_FLOWER_0C40C0E03 }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: "upload"
           ###### Repository/Build Configurations - These values can be configured to match your app requirements. ######
@@ -46,6 +35,7 @@ jobs:
         env:
           HUGO_VERSION: 0.124.1
 
+
   close_pull_request_job:
     if: github.event_name == 'pull_request' && github.event.action == 'closed'
     runs-on: ubuntu-latest
@@ -55,5 +45,5 @@ jobs:
         id: closepullrequest
         uses: Azure/static-web-apps-deploy@v1
         with:
-          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_AGREEABLE_DESERT_08FFE2B1E }}
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN_GENTLE_FLOWER_0C40C0E03 }}
           action: "close"
