--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 ######################## default configuration ####################
-baseURL = "https://dancollins.cloud/"
+baseURL = "http://localhost:1313/"
 title = "DanCollinsCloud - A blog all around cloud computing and working in tech"
 theme = "bookworm-light-hugo"
 # post pagination
